--- a/package.json
+++ b/package.json
@@ -9,5 +9,20 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "styled-components": "^5.0.1"
-  }
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
