--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.3.1",
     "styled-components": "^5.0.1"
   },
